--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -2346,20 +2346,14 @@ The same trend appeared for the RT data. For shapes associated with good person,
 # Discussion
 [Summary of results] Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Further more, we found this prioritization of good character was modulated by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. This modulation effect of the prioritization of good character occurred even when self- or character- related information are irrelevant to the task. In contrast, when good character became other-referential, even implicitly, the information process was slowed down. Together, these findings highlight the importance of the self-referential in perceiving information related to good character, contributed to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
 
-[Effect of good character] The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual decision making [van Bavel]. Previous research reported the effect of moral perception [] but the mechanism is disputed. For example, [Anderson et al 2011] reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect []. Another studies by [] found that moral words are more likely to be judged as words when it was presented sublimial [], however, this effect may caused by semantic priming instead of morality []. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming [Firestone; Jussim et al., 2016] or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
+[Effect of good character] The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual decision making [van Bavel]. Previous research reported the effect of moral perception [] but the mechanism is disputed. For example, [Anderson et al 2011] reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect [Stein et al]. Another studies by [] found that moral words are more likely to be judged as words when it was presented subliminally [], however, this effect may caused by semantic priming instead of morality [Jussim et al., 2016]. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming [Firestone; Jussim et al., 2016] or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
 
-Note that there is one critical difference between the current task and previous experiments that aimed at detection the effect of morality in lower-level information processing. Previous studies used the detection task, where participants need to detect whether or a stimulus exist. for example, in Anderson et al study, the task is to detect a face in awareness, in Gantman et al's study, the task is to detect existence of a word. By contrast, in our task, participants were required to recognize the stimuli pair and then make a decision. Previous review found that even for affective stimuli, results from detection and recognition tasks are not always consistent: while negativity effect are usual observed in the detection task, positiivity effect are often observed in recognition tasks []. This different may explains why in our experiments we found robust positivity effect for moral character. 
+This positivity effect, though surprising at first, is largely consistent with previous studies. Positivity effect had been found in associative learning [], lexical decision-making [], and IAT []. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception [@pool_attentional_2016]. The task used in the current study may explain why the result are different from previous studies such as @anderson_visual_2011 and @eiserbeck_visual_2020, where the early processing stage were targeted by attention blink paradigm. 
 
-perceptual processing is the upstream of our information that can help us understand priority of different information. We thus contributed to the research on moral character by demonstrating that information related to good character in general, and good moral self in specific, is prioritized. Specifically, we found that instantly learned moral character information can change the information process of neutral, non-social information. Presumably this prioritization occurs because good moral character and moral self is central to one's social life. Research has found that moral self is essential for one's identity and people has stronger self-enhancement effect in moral domain than in other social domain. This positivity effect is opposite to negativity effect in impression formation, suggesting that impression formation and perceptual-matching may involved different information process mechanisms. This positivity effect, though surprising at first, is well supported by previous studies. Positivity effect had been found in associative learning [], lexical decision-making [], and IAT []. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception [@pool_attentional_2016]. The task used in the current study may explain why the result are different from previous studies such as @anderson_visual_2011 and @eiserbeck_visual_2020, where the early processing stage were targeted by attention blink paradigm. 
+[Self-binding as a novel explanation and consistent with broader theory about morality] However, the theory that the good things are similar in the mental representation [] is not sufficient to explain the current results because we only have three pair of stimuli and semantic meaning may not play a role. Also, compared to studies that using more ecological stimuli such as faces, we used geometric shape, which eliminated differences in low-level features. Because it is the actor (participant) who making the perceptual decisions and execute the action, the prioritization of good-character can be explained by either a moral categorization theory, which suggest that moral character is a categorization factor and good person are categorized as in-group, or self as binding factor view, which suggest that there is a spontaneous self-referential processing. Our results suggest that the binding between good character and self may account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view [], suggesting that moral-self as true self is not only at self-report level but also at perceptual level. When good character presented together with non-other information, the responses was slowed down in perceptual processing. 
 
-[Self-binding as a novel explanation and consistent with broader theory about morality] However, the results found in our studies can not be explained by the theory the good thing are similar in the mental representation because we only have three pair of stimuli and semantic meaning may not play a role. Also, compared to studies that using more ecological stimuli such as faces, we used geometric shape, which eliminated differences in low-level features. By focusing on the agent who making the perceptual decisions, we explored the effect of self-referential in prioritization and found reliable modulation effect of self-referential process on the perception of good character. These results suggested that either a general-self based social categorization or moral self as anchor view alone can explain the results. Instead, we proposed that moral-self based social categorization can better account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. Further, our results showed that we not only regard moral self as the true-self, but also seek to categorize information based on moral-self: when good-other creates an ambiguous situation, the responses was slowed down in perceptual processing. 
-
-[Perspective] 
-
-[limitations] One would argue that the effect here may represent a memory effect instead of perpetual effect *per se*. (1) how to define perception is debated, while some researchers included memory components in perception, others do not. Here, we are more on the broader view of perception. (2), the memory effect view predict that the effect will be eliminated after participants became familiar with the association. We did supplementary analysis where we divided the whole experiment into three different stage: early, middle, and later, and then compared the results pattern of early and later stages. These results revealed null effect of training. These additional analysis suggested that memory effect may exist, but in a sense that they reflected a long-term, stable pattern of different moral character, instead of a short-term, associative learning induced effect.
-
-[free association from small world of words]
-
+[Beyond the debate about penetration of perception] 
+One would argue that the effect here may represent an effect in memory or in decision-making process instead of perpetual effect *per se*. We agree that perceptual decision-making process include more processes than just perception, if we define perception narrowly as encoding of the sensory information. This suggest that we need to apply computational models to behavioral data and/or combined with data from other modules to quantify the processes underlying perceptual decisions. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory []. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self [] or moral self []. Moreover, reinforcement learning models also revealed that ....
 
 # References
 ```{r create_r-references, echo=FALSE,results='hide'}
