--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -175,14 +175,14 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={The good person is me: Spontaneous self-referential process explains the prioritization of moral character},
+  pdftitle={The good person is me: Spontaneous binding with the self prioritizes good character},
   pdfauthor={Hu Chuan-Peng1, 2, Kaiping Peng2, \& Jie Sui3},
   pdflang={en-EN},
   pdfkeywords={Perceptual decision-making, Self positivity bias, moral character},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{The good person is me: Spontaneous self-referential process explains the prioritization of moral character}
+\title{The good person is me: Spontaneous binding with the self prioritizes good character}
 \author{Hu Chuan-Peng\textsuperscript{1, 2}, Kaiping Peng\textsuperscript{2}, \& Jie Sui\textsuperscript{3}}
 \date{}
 
@@ -203,7 +203,7 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Sch
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{%
-Morality is central to social perception and moral psychology, previous studies found that information related to moral character is prioritized information processing and explained the effect in terms of valence, i.e., either as a negativity or positivity effect. In this study, we report 9 experiments (N = 4XX, trials = XXX) where we find (1) there is a robust good character prioritization effect in perceptual matching task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) the prioritization of good character was robust only when the good character is referred to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when either the self or the moral character information was task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
+Moral character is central to social evaluation and moral judgment. As such, information related to moral character is prioritized in human cognition. This effect is usually explained as a valence effect. Here we report 9 experiments (N = 4XX, trials = XXX) which reveal (1) there is a robust good character prioritization effect in a perceptual matching task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) the prioritization of good character was robust only when the good character referred to the self but weak or non-exist when it referred to others, suggesting a binding effect of the self; (3) the binding between the self and good character exist even when one of them was task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing, i.e., binding the good character with self, as a novel mechanism of the prioritization effect of good character.
 }
 
 
@@ -412,10 +412,12 @@ For the \emph{d} prime, we found that an interaction between moral character eff
 
 For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zero for the good vs.~neutral differences (\(median_{diff}\) = -105.39; 95\% HDI = {[}-533.16 281.69{]}) but not for the bad vs.~neutral differences (\(median_{diff}\) = -9.46; 95\% HDI = {[}-290.72 251.38{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -47.58; 95\% HDI = {[}-202.88 16.83{]}) and good-other (\(median_{diff}\) = -57.14; 95\% HDI = {[}-991.89 621.29{]}) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
 
+These results suggested that the prioritization of good character is modulated by the self-referential processing: when the good character was prioritized when it was self-referential, but it was slowed down when it was other-referential.
+
 \hypertarget{spontaneous-binding-between-the-good-character-and-the-self}{%
 \subsection{Spontaneous binding between the good character and the self}\label{spontaneous-binding-between-the-good-character-and-the-self}}
 
-In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance modulated the effect observed in previous experiment.
+Two studies further tested whether the binding between self and good character happen even when two aspect of information are separated and only one of them is task-relevant. We are interested in testing whether the task-relevance modulated the effect observed in previous experiment.
 
 In experiment 4a, where self- and other-referential were task-relevant and moral character are task-irrelevant. We found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui et al. (2012)).
 
@@ -431,28 +433,24 @@ The same pattern was found for RTs. For self-referential condition, when good ch
 
 In experiment 4b, moral character was the task-relevant factor, and we found that there were main effect of moral character: shapes associated with good character were performed better than other-related conditions, on both \emph{d'} and reaction times.
 
-Most importantly, we found evidence that task-irrelevant self-referential process also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% CI{[}-.18, .09{]}).
+Most importantly, we found evidence that task-irrelevant self-referential process also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07), but this effect did not happen when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% HDI{[}-.18, .09{]}).
 
-The same trend appeared for the RT data. For shapes associated with good person, with a ``self'' inside the shape reduced the reaction times as compared with when a ``other'' inside the shape (\(mean_{diff}\) = -55 ms, 95\%CI{[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% CI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
+The same trend appeared for the RT data. For shapes associated with good person, with a ``self'' inside the shape reduced the reaction times as compared with when a ``other'' inside the shape (\(mean_{diff}\) = -55 ms, 95\% HDI {[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% HDI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-We human inevitably view other people and ourselves in a moral lens {[}citation is needed{]}. Yes how this moral lens will change our information processes is unknown. Across nine experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and explored the mechanisms underlying the effect. We found robust evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. The prioritization effect occur when self and good character are combined, whether task-relevant or not. When good character were other-referential, even implicitly, the information process might be slowed down. Together, our findings highlight the importance of the self-referential in perceiving positive moral character. These findings contributed to a growing literature on the social nature of perception (Freeman, Stolier, \& Brooks, 2020; Xiao, Coppin, \& Bavel, 2016) by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
+{[}Summary of results{]} Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Further more, we found this prioritization of good character was modulated by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. This modulation effect of the prioritization of good character occurred even when self- or character- related information are irrelevant to the task. In contrast, when good character became other-referential, even implicitly, the information process was slowed down. Together, these findings highlight the importance of the self-referential in perceiving information related to good character, contributed to a growing literature on the social nature of perception (Freeman, Stolier, \& Brooks, 2020; Xiao, Coppin, \& Bavel, 2016) by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
 
-First, we examined the perceptual process of moral character to understand how moral information are processed. Prior research has demonstrated that bad moral behavior is stronger in impression formation {[}citation{]} and bad moral character are attended quicker than neutral moral character {[}{]}. The empirical studies on the moral character often focus on self-reported data rather than behavioral response. In this paper, we examined the perceptual processes of moral character. In doing so, we shifted the focus from consequences of information process of moral character to the information process itself, thus broaden the scope of the existing research.
+{[}Effect of good character{]} The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual decision making {[}van Bavel{]}. Previous research reported the effect of moral perception {[}{]} but the mechanism is disputed. For example, {[}Anderson et al 2011{]} reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect {[}Stein et al{]}. Another studies by {[}{]} found that moral words are more likely to be judged as words when it was presented subliminally {[}{]}, however, this effect may caused by semantic priming instead of morality {[}Jussim et al., 2016{]}. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming {[}Firestone; Jussim et al., 2016{]} or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
 
-Second, perceptual processing is the upstream of our information that can help us understand priority of different information. We thus contributed to the research on moral character by demonstrating that information related to good character in general, and good moral self in specific, is prioritized. Specifically, we found that instantly learned moral character information can change the information process of neutral, non-social information. Presumably this prioritization occurs because good moral character and moral self is central to one's social life. Research has found that moral self is essential for one's identity and people has stronger self-enhancement effect in moral domain than in other social domain. This positivity effect is opposite to negativity effect in impression formation, suggesting that impression formation and perceptual-matching may involved different information process mechanisms. This positivity effect, though surprising at first, is well supported by previous studies. Positivity effect had been found in associative learning {[}{]}, lexical decision-making {[}{]}, and IAT {[}{]}. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception (Pool et al., 2016). The task used in the current study may explain why the result are different from previous studies such as E. Anderson et al. (2011) and Eiserbeck and Abdel Rahman (2020), where the early processing stage were targeted by attention blink paradigm.
+This positivity effect, though surprising at first, is largely consistent with previous studies. Positivity effect had been found in associative learning {[}{]}, lexical decision-making {[}{]}, and IAT {[}{]}. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception (Pool et al., 2016). The task used in the current study may explain why the result are different from previous studies such as E. Anderson et al. (2011) and Eiserbeck and Abdel Rahman (2020), where the early processing stage were targeted by attention blink paradigm.
 
-The absence of negativiity effect may also caused by the fact that the bad character here is an abstract concept that may not bring concrete threatening to the participants, therefore it is not as strong as previous studies used emotional stimuli that has higher arousal. Besides, recent study found that when the moral violation is not life-threatening, the impression of bad character is volatile in the social context {[}{]}.
+{[}Self-binding as a novel explanation and consistent with broader theory about morality{]} However, the theory that the good things are similar in the mental representation {[}{]} is not sufficient to explain the current results because we only have three pair of stimuli and semantic meaning may not play a role. Also, compared to studies that using more ecological stimuli such as faces, we used geometric shape, which eliminated differences in low-level features. Because it is the actor (participant) who making the perceptual decisions and execute the action, the prioritization of good-character can be explained by either a moral categorization theory, which suggest that moral character is a categorization factor and good person are categorized as in-group, or self as binding factor view, which suggest that there is a spontaneous self-referential processing. Our results suggest that the binding between good character and self may account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view {[}{]}, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. When good character presented together with non-other information, the responses was slowed down in perceptual processing.
 
-Third, knowing that good character and moral-self is prioritized is not sufficient; we need to know why this prioritization occurs. Our results indicate that the good character prioritization is driven by spontaneous self-referential processing. Also, these results revealed that either a general-self based social categorization or moral self as anchor view alone can explain the results. Instead, we proposed that moral-self based social categorization can better account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. Further, our results showed that we not only regard moral self as the true-self, but also seek to categorize information based on moral-self: when good-other creates an ambiguous situation, the responses was slowed down in perceptual processing.
+{[}Perspective{]}
 
-Fourth, we find that behavioral data and self-reported data doesn't congruent. When asked to rate the distance between self and good person, the distance is similar to the distance between self and neutral person. However, the distance between self and bad person is the longest, even longer than the distance between good and bad. These results might be caused by the social desirability effect that often occurs in self-reporting. However, we didn't not find strong evidence for the correlation between behavioral results and the self-reported person distance.
-
-{[}Memory or perception.{]} One would argue that the effect here may represent a memory effect instead of perpetual effect \emph{per se}. (1) how to define perception is debated, while some researchers included memory components in perception, others do not. Here, we are more on the broader view of perception. (2), the memory effect view predict that the effect will be eliminated after participants became familiar with the association. We did supplementary analysis where we divided the whole experiment into three different stage: early, middle, and later, and then compared the results pattern of early and later stages. These results revealed null effect of training. These additional analysis suggested that memory effect may exist, but in a sense that they reflected a long-term, stable pattern of different valenced moral character, instead of a short-term, associative learning induced effect.
-
-{[}free association from small world of words{]}
+{[}limitations{]} One would argue that the effect here may represent an effect in memory or in decision-making process instead of perpetual effect \emph{per se}. We agree that perceptual decision-making process include more processes than just perception. If we narrowly define perception as encoding of the sensory information, than perception is only one of many processes involved in a perceptual decision-making. This suggest that we need to further model the behavioral data and/or combined with other modules to deepen our understanding of the mechanism of the perceptual decision-making. For example, sequential sampling model suggested that a perceptual decision-making is a continuous evidence accumulation process and a decision is made when the amount of evidence passed a threshold. In this model, the evidence can accumulate from both sensory information but also memory{[}{]}. Recently application of sequential sample model to the perceptual matching task also suggestion that different process may contributed to the prioritization effect of self or moral self.
 
 \hypertarget{references}{%
 \section{References}\label{references}}
